{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 279,
  "lineage": "ccf501eb-92f4-cd15-34ab-26a309735ba8",
  "resources": [
    {
      "module": "module.natgateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d87abf42abe83911",
            "arn": "arn:aws:ec2:eu-west-1:142939271009:elastic-ip/eipalloc-0d87abf42abe83911",
            "association_id": "eipassoc-08dffb656baae9485",
            "domain": "vpc",
            "id": "eipalloc-0d87abf42abe83911",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-041f0b4931476a4eb",
            "private_dns": "ip-172-17-24-172.eu-west-1.compute.internal",
            "private_ip": "172.17.24.172",
            "public_dns": "ec2-52-30-222-185.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.30.222.185",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP_0_prod-simple"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "EIP_0_prod-simple",
              "Project": "next-go-project"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.natgateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:142939271009:internet-gateway/igw-0af8988c070d50d4a",
            "id": "igw-0af8988c070d50d4a",
            "owner_id": "142939271009",
            "tags_all": {
              "Environment": "prod",
              "Project": "next-go-project"
            },
            "vpc_id": "vpc-0b7a3ca35522217a2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.natgateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d87abf42abe83911",
            "association_id": "eipassoc-08dffb656baae9485",
            "connectivity_type": "public",
            "id": "nat-01cdf74a79580ff6e",
            "network_interface_id": "eni-041f0b4931476a4eb",
            "private_ip": "172.17.24.172",
            "public_ip": "52.30.222.185",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03382c03f5d84d768",
            "tags": {
              "Name": "NATGateway_0_prod-simple"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "NATGateway_0_prod-simple",
              "Project": "next-go-project"
            }
          },
          "dependencies": [
            "module.natgateway.aws_eip.nat_gateway",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:142939271009:security-group/sg-0ea8e05d25f7e4d91",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0ea8e05d25f7e4d91",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20250816142217036200000001",
            "name_prefix": "terraform-",
            "owner_id": "142939271009",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "Project": "next-go-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7a3ca35522217a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "public_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c2dc290f5056ac0",
            "original_route_table_id": "rtb-0ea0afaf5739057af",
            "route_table_id": "rtb-0ade07fdac96e2c9f",
            "vpc_id": "vpc-0b7a3ca35522217a2"
          },
          "dependencies": [
            "module.natgateway.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:142939271009:route-table/rtb-05f6fa56a37707312",
            "id": "rtb-05f6fa56a37707312",
            "owner_id": "142939271009",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01cdf74a79580ff6e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouteTable_0_prod-simple"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "PrivateRouteTable_0_prod-simple",
              "Project": "next-go-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7a3ca35522217a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.natgateway.aws_eip.nat_gateway",
            "module.natgateway.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:142939271009:route-table/rtb-062993c01712ebf8d",
            "id": "rtb-062993c01712ebf8d",
            "owner_id": "142939271009",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01cdf74a79580ff6e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouteTable_1_prod-simple"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "PrivateRouteTable_1_prod-simple",
              "Project": "next-go-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7a3ca35522217a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.natgateway.aws_eip.nat_gateway",
            "module.natgateway.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:142939271009:route-table/rtb-0ade07fdac96e2c9f",
            "id": "rtb-0ade07fdac96e2c9f",
            "owner_id": "142939271009",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0af8988c070d50d4a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable_prod-simple"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "PublicRouteTable_prod-simple",
              "Project": "next-go-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7a3ca35522217a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.natgateway.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00098235660793be8",
            "route_table_id": "rtb-05f6fa56a37707312",
            "subnet_id": "subnet-0aec661e4dc28fbae"
          },
          "dependencies": [
            "module.natgateway.aws_eip.nat_gateway",
            "module.natgateway.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4dd030be60bfc5c",
            "route_table_id": "rtb-062993c01712ebf8d",
            "subnet_id": "subnet-0220ee48cda0244bd"
          },
          "dependencies": [
            "module.natgateway.aws_eip.nat_gateway",
            "module.natgateway.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0339d312d86a40c14",
            "route_table_id": "rtb-0ade07fdac96e2c9f",
            "subnet_id": "subnet-03382c03f5d84d768"
          },
          "dependencies": [
            "module.natgateway.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7f77156e135699d",
            "route_table_id": "rtb-0ade07fdac96e2c9f",
            "subnet_id": "subnet-0fe0c9a42fb8244c3"
          },
          "dependencies": [
            "module.natgateway.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:142939271009:subnet/subnet-0aec661e4dc28fbae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.17.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aec661e4dc28fbae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "142939271009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet_0_prod-simple"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "PrivateSubnet_0_prod-simple",
              "Project": "next-go-project"
            },
            "vpc_id": "vpc-0b7a3ca35522217a2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:142939271009:subnet/subnet-0220ee48cda0244bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.17.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0220ee48cda0244bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "142939271009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet_1_prod-simple"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "PrivateSubnet_1_prod-simple",
              "Project": "next-go-project"
            },
            "vpc_id": "vpc-0b7a3ca35522217a2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:142939271009:subnet/subnet-03382c03f5d84d768",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.17.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03382c03f5d84d768",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "142939271009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet_0_prod-simple"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "PublicSubnet_0_prod-simple",
              "Project": "next-go-project"
            },
            "vpc_id": "vpc-0b7a3ca35522217a2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:142939271009:subnet/subnet-0fe0c9a42fb8244c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.17.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe0c9a42fb8244c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "142939271009",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet_1_prod-simple"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "PublicSubnet_1_prod-simple",
              "Project": "next-go-project"
            },
            "vpc_id": "vpc-0b7a3ca35522217a2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:142939271009:vpc/vpc-0b7a3ca35522217a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-096f6812fcd2eebd9",
            "default_route_table_id": "rtb-0ade07fdac96e2c9f",
            "default_security_group_id": "sg-0df16d216158cd5c4",
            "dhcp_options_id": "dopt-011b792029a0b4694",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b7a3ca35522217a2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ade07fdac96e2c9f",
            "owner_id": "142939271009",
            "tags": {
              "Name": "MainVPC_prod-simple"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "MainVPC_prod-simple",
              "Project": "next-go-project"
            }
          }
        }
      ]
    }
  ]
}